--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "m2b"]
+	path = m2b
+	url = https://github.com/ldbk/m2b
+	shallow = true
+	registered = true
